# SDIF

Easdif/: CMakeLists.txt  ChangeLog  Doxyfile  Doxyfile.in  Makefile  Makefile.am  Makefile.in  README  README.MacOSX  README.doc  ReleaseNotes  all.install  all.ircam.sh  autogen.sh  configure  configure.in
Easdif/cmModules/: FindPerlLibs.cmake  FindSWIG.cmake  SET_LOCAL_DEFAULTS.cmake
Easdif/easdif/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  easdif.h  easdif_config.h.in  easdif_version.h  easdif_version.h.in  easdifintro.h  easdifintro.h.in  sdif_frame.cpp  sdif_frame.hpp  sdif_matrix.hpp  sdifentity.cpp  sdifentity.h  sdifentity.hpp  sdifexception.cpp  sdifexception.h  sdifexception.hpp  sdifframe.cpp  sdifframe.h  sdifframe.hpp  sdifinit.cpp  sdifinit.h  sdifinit.hpp  sdifmatrix.cpp  sdifmatrix.h  sdifmatrixdata.h  sdifmatrixdata.hpp  sdifmatrixdatainterface.h  sdifmatrixdatainterface.hpp  sdifnamevaluetable.cpp  sdifnamevaluetable.h  sdifnamevaluetable.hpp
Easdif/matlab/: CMakeLists.txt  FSdifexist.m  Fsdif_read_handler.cpp  Fsdif_write_handler.cpp  Fsdifloadfile.m  Fsdifopen.m  Fsdifread.m  Fsdifrewind.m  Fsdifwrite.m  fieldnames.hpp
Easdif/src/: Makefile  Makefile.am  easdif_version.h  easdifintro.h  sdifentity.cpp  sdifentity.h  sdifexception.h  sdifframe.cpp  sdifframe.h  sdifinit.cpp  sdifinit.h  sdifmatrix.cpp  sdifmatrix.h  sdifmatrixdata.h  sdifmatrixdatainterface.h  sdifnamevaluetable.h
Easdif/swig/: CMakeLists.txt  Makefile  Makefile.am  README  configure.in  easdif-common-init.i  easdif-common.i.in  easdif-defines.i  easdif.i  sdif-common.i.in  sdif.i  sdifdefines.i  sdifsignature.i  sdiftypemap.i  test.pl
Easdif/swig/java/: CMakeLists.txt  Makefile.am  easdif-java.i
Easdif/swig/perl5/: CMakeLists.txt  Makefile.am  test.pl  test.pl.in
Easdif/swig/python/: CMakeLists.txt  Makefile.am  easdif-python.i  sdiftypemap-python.i  setup.py.in  test.py  test.py.in
Easdif/test/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  classbis  classbiww  classbiww.cpp  tetyp.cpp  try_excep.cpp  tutofini.cpp
SDIF/: CMakeLists.txt  ChangeLog  Makefile  Makefile.am  Makefile.in  Makefile.postamble  Makefile.preamble  README.MacOSX  ReleaseNotes  Sdif.dsp  autogen.sh  compileandinstall  configure  configure.in  missing  mkinstalldirs  sdif.pbxproj  sdif.spec.in  sdif.vcproj
SDIF/cmModules/: GET_ARCH.cmake  GET_GCC_VERSION.cmake  Makefile.am  REDIRECT_COMPILERS_TO_SYSROOT.cmake  SET_COMPILER_FLAGS.cmake  SET_LOCAL_DEFAULTS.cmake  UseSWIG.cmake
SDIF/data/: Makefile.am  Makefile.in
SDIF/doc/: DataChunk.fig  FileLevel.fig  Makefile  Makefile.am  Makefile.in  MatrixHeader  Patch.html  SdifManuelDoc.html  SdifNormBar.html  SdifNormDoc.html  SdifNormDocFr.html  SdifProgDoc.html  Todo.html  download.html  ex.txt  index.html  indexProg.html  sdif.src
SDIF/doc/download/: index.html
SDIF/doc/intern/: todo-main.html
SDIF/doc/pics/: Makefile.am  Makefile.in
SDIF/doc/standard/: sdif-standard.html  types-doc.html  types-main.html
SDIF/examples/: Makefile.am  list-nvt.c  list-types.c
SDIF/files/txt/: 1fof.sdif.txt  AO.sdif.txt  P0.sdif.txt  P2.sdif.txt  Patch0.sdif.txt  Patch0_2.sdif.txt  Patch1.sdif.txt  Patch1Mode.sdif.txt  orgue.sdif.txt  perc.sdif.txt
SDIF/include/: Makefile.in  sdif.h  sdif.h.in  sdif_version.h.in
SDIF/iosbuild/SDIF-lib-ios.xcodeproj/: project.pbxproj
SDIF/macosxbuild/: Info.plist  Makefile.am  README.MacOSX
SDIF/macosxbuild/SDIF.pbproj/: project.pbxproj
SDIF/macosxbuild/SDIF.xcode/: project.pbxproj
SDIF/macosxbuild/SDIF.xcodeproj/: Makefile.am
SDIF/others/: SdifUInt8.c  SdifUInt8.h
SDIF/sdif/: CMakeLists.txt  Makefile  Makefile.am  Makefile.headers  Makefile.in  Makefile.src  SdifCheck.c  SdifCheck.h  SdifConvToText.c  SdifConvToText.h  SdifErrMess.c  SdifErrMess.h  SdifError.c  SdifError.h  SdifFGet.c  SdifFGet.h  SdifFPrint.c  SdifFPrint.h  SdifFPut.c  SdifFPut.h  SdifFRead.c  SdifFRead.h  SdifFScan.c  SdifFScan.h  SdifFWrite.c  SdifFWrite.h  SdifFile.c  SdifFile.h  SdifFileStruct.h  SdifFrame.c  SdifFrame.h  SdifFrameType.c  SdifFrameType.h  SdifGlobals.c  SdifGlobals.h  SdifHard_OS.c  SdifHard_OS.h  SdifHash.c  SdifHash.h  SdifHighLevel.c  (+42 more)
SDIF/sdif/test/: Makefile  testselect.c
SDIF/sdifcpp/: Makefile.am
SDIF/test/: CMakeLists.txt  File.sdif.txt.r  Makefile  Makefile.am  Makefile.in  cmd_testcheck  test.c  test.dsp  test1.c  test2.c  test_cmpsdif  test_conv  testcheck.c  testselect.c
SDIF/test/files/: Makefile.am  Makefile.in
SDIF/tools/: CMakeLists.txt  Makefile.am  Makefile.in  querysdif.c  sdifextract.c  sdiftotext.c  tosdif.c
SDIF/types/: Makefile  index.html  sdiftypes.xml  xmltohtml.pl  xmltostyp.pl
branches/autoconf/SDIF/: Makefile.am  configure  configure.in
tags/Easdif_lib_version_0_3_1/SDIF/: Makefile.am  README.MacOSX  README.shared  autogen.sh  configure.in
tags/SDIF_lib_version_3_7_2/SDIF/: Makefile.am  configure.in  sdif.spec.in
trunk/Easdif/: CMakeLists.txt  ChangeLog  Doxyfile  Doxyfile.in  Easdif.pc.in  Makefile  Makefile.am  Makefile.in  README  README.MacOSX  ReleaseNotes  all.install  all.ircam.sh  autogen.sh  configure  configure.in
trunk/Easdif/cmModules/: ADD_EASDIF_FLAGS.cmake  FindSWIG.cmake  RenameInstalledStaticLib.cmake.in  SET_LOCAL_DEFAULTS.cmake
trunk/Easdif/easdif/: CMakeLists.txt  Makefile.am  Makefile.in  easdif.h  easdif_config.h.in  easdif_exports.hpp  easdif_version.h  easdif_version.h.in  easdifintro.h  easdifintro.h.in  easdifintro.hpp.in  sdif_frame.cpp  sdif_frame.hpp  sdif_matrix.cpp  sdif_matrix.hpp  sdifentity.cpp  sdifentity.h  sdifentity.hpp  sdifexception.cpp  sdifexception.h  sdifexception.hpp  sdifframe.cpp  sdifframe.h  sdifinit.cpp  sdifinit.h  sdifmatrix.cpp  sdifmatrix.h  sdifmatrix.hpp  sdifmatrixdata.h  sdifmatrixdata.hpp  sdifmatrixdatainterface.h  (+3 more)
trunk/SDIF/: AUTHORS  CMakeLists.txt  ChangeLog  Makefile  Makefile.am  Makefile.in  Makefile.postamble  Makefile.preamble  README  ReleaseNotes  Sdif.dsp  Sdif.dsw  autogen.sh  configure  configure.in  mkinstalldirs  sdif.ncb  sdif.pc.in  sdif.sln  sdif.spec.in  sdif.vcproj
(+1154 files in other folders)
